fix css spacing

--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ p#result-question {
   padding: 0px 10px;
   font-size: 0.8em;
   margin: 0;
-  letter-spacing: -0.15em;
+  letter-spacing: -0.07em;
 }
 
 section#result p#result-large{
